Add HTML Structure and Insert Images

--- a/index.html
+++ b/index.html
@@ -10,5 +10,69 @@
 </head>
 <body>
 
+  <div class="container"><!-- Begin Main Container Div -->
+
+    <div class="header"><!-- Begin Header Div -->
+      <img src="./resources/images/logo.png" alt="Secret Agent Supply Logo">
+      <span>SECRET AGENT SUPPLY INC.</span>
+    </div><!-- End Header Div -->
+
+    <div class="banner"><!-- Begin Banner Div -->
+      <div class="banner-content">
+        <p>NEW ARRIVAL</p>
+        <h1>SPORT BIKES AND MOTORCYCLES</h1>
+      </div>
+    </div><!-- End Banner Div -->
+
+    <div class="navigation"><!-- Begin Navigation Div -->
+      <nav>
+        <li><a href="#">Eyewear</a></li>
+        <li><a href="#">Apparel</a></li>
+        <li><a href="#">Gadgets</a></li>
+        <li><a href="#">Vehicles</a></li>
+        <li><a href="#">Classes</a></li>
+        <li><a href="#">Contact</a></li>
+      </nav>
+    </div><!-- End Navigation Div -->
+
+    <div class="main-content"><!-- Begin Main Content Div -->
+      <div class="featured-items">
+        <div class="featured-item">
+
+          <img src="./resources/images/pen.png" alt="Secret Agent Pen">
+          <span class="caption">Exploding Pen</span>
+
+        </div>
+        <div class="featured-item">
+
+          <img src="./resources/images/watch.png" alt="Secret Agent Watch">
+          <span class="caption">Cellular Watch</span>
+
+        </div>
+        <div class="featured-item">
+
+          <img src="./resources/images/glasses.png" alt="Secret Agent Glasses">
+          <span class="caption">Thermal Glasses</span>
+
+        </div>
+      </div>
+    </div><!-- End Main Content Div -->
+
+    <div class="about-info"><!-- Begin About Info Div -->
+      <div class="aboutInfo-location">
+        <span class="caption">Location</span>
+        <p>-47.346436, 84.32354</p>
+      </div>
+      <div class="aboutInfo-hours">
+        <span class="caption">Hours</span>
+        <p>0800 - 1800</p>
+      </div>
+    </div><!-- End About Info Div -->
+
+    <div class="footer"><!-- Begin Footer Div -->
+      <p>&copy; Secret Agent Supply, Inc.</p>
+    </div><!-- End Footer Div -->
+
+  </div><!-- End Main Container Div -->
 </body>
 </html>
