Add CSS Styles --- Desktop Version Complete

--- a/index.html
+++ b/index.html
@@ -13,64 +13,78 @@
   <div class="container"><!-- Begin Main Container Div -->
 
     <div class="header"><!-- Begin Header Div -->
-      <img src="./resources/images/logo.png" alt="Secret Agent Supply Logo">
-      <span>SECRET AGENT SUPPLY INC.</span>
+      <div class="header-wrapper">
+        <img src="./resources/images/logo.png" alt="Secret Agent Supply Logo">
+        <span class="brand">SECRET AGENT SUPPLY INC.</span>
+      </div>
     </div><!-- End Header Div -->
 
     <div class="banner"><!-- Begin Banner Div -->
-      <div class="banner-content">
-        <p>NEW ARRIVAL</p>
-        <h1>SPORT BIKES AND MOTORCYCLES</h1>
+      <div class="banner-content-wrapper">
+        <div class="banner-content">
+          <p>NEW ARRIVAL</p>
+          <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        </div>
       </div>
     </div><!-- End Banner Div -->
 
     <div class="navigation"><!-- Begin Navigation Div -->
-      <nav>
-        <li><a href="#">Eyewear</a></li>
-        <li><a href="#">Apparel</a></li>
-        <li><a href="#">Gadgets</a></li>
-        <li><a href="#">Vehicles</a></li>
-        <li><a href="#">Classes</a></li>
-        <li><a href="#">Contact</a></li>
-      </nav>
+      <div class="navigation-wrapper">
+        <nav>
+          <ul>
+            <li><a href="#">Eyewear</a></li>
+            <li><a href="#">Apparel</a></li>
+            <li><a href="#">Gadgets</a></li>
+            <li><a href="#">Vehicles</a></li>
+            <li><a href="#">Classes</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </div><!-- End Navigation Div -->
 
     <div class="main-content"><!-- Begin Main Content Div -->
       <div class="featured-items">
+
         <div class="featured-item">
-
-          <img src="./resources/images/pen.png" alt="Secret Agent Pen">
-          <span class="caption">Exploding Pen</span>
-
+          <div class="featuredItem-imageContainer">
+            <img src="./resources/images/pen-1.png" alt="Secret Agent Pen">
+          </div>
+          <h3 class="caption">Exploding Pen</h3>
         </div>
+
         <div class="featured-item">
-
-          <img src="./resources/images/watch.png" alt="Secret Agent Watch">
-          <span class="caption">Cellular Watch</span>
-
+          <div class="featuredItem-imageContainer">
+            <img src="./resources/images/watch-1.png" alt="Secret Agent Watch">
+          </div>
+          <h3 class="caption">Cellular Watch</h3>
         </div>
+
         <div class="featured-item">
-
-          <img src="./resources/images/glasses.png" alt="Secret Agent Glasses">
-          <span class="caption">Thermal Glasses</span>
-
+          <div class="featuredItem-imageContainer">
+            <img src="./resources/images/glasses-1.png" alt="Secret Agent Glasses">
+          </div>
+          <h3 class="caption">Thermal Glasses</h3>
         </div>
+
       </div>
     </div><!-- End Main Content Div -->
 
     <div class="about-info"><!-- Begin About Info Div -->
       <div class="aboutInfo-location">
-        <span class="caption">Location</span>
+        <h3 class="caption">Location</h3>
         <p>-47.346436, 84.32354</p>
       </div>
       <div class="aboutInfo-hours">
-        <span class="caption">Hours</span>
+        <h3 class="caption">Hours</h3>
         <p>0800 - 1800</p>
       </div>
     </div><!-- End About Info Div -->
 
     <div class="footer"><!-- Begin Footer Div -->
-      <p>&copy; Secret Agent Supply, Inc.</p>
+      <div class="footer-content">
+        <p>&copy; Secret Agent Supply, Inc.</p>
+      </div>
     </div><!-- End Footer Div -->
 
   </div><!-- End Main Container Div -->
